--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "refer-and-earn",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://accredian-backend-task-tr3y.onrender.com/",
+  "proxy": "https://accredian-backend-task-tr3y.onrender.com",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
